# azizo

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
azizo/: Cargo.toml
azizo-core/: Cargo.toml
azizo-core/src/: controller.rs  error.rs  lib.rs  mock.rs  modes.rs  state.rs
azizo/src/: main.rs  toast.rs
examples/: toggle_ereading.rs
src/: controller.rs  lib.rs  main.rs
